@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.7 2005/06/16 06:57:58 jlam Exp $
+# $NetBSD: Makefile,v 1.8 2005/10/16 12:47:24 jdolecek Exp $
 #
 
-DISTNAME=	pwc-8.12
-PKGNAME=	phpsview-1.02
-PKGREVISION=	2
+DISTNAME=	pwc-9.0.2
+PKGNAME=	phpsview-${DISTNAME:C/.*-//}
+PKGREVISION=	# empty
 CATEGORIES=	graphics x11
 MASTER_SITES=	http://www.smcc.demon.nl/webcam/
 
 PATCH_SITES=	http://www2.starcat.ne.jp/~takam/bsd/
-PATCHFILES= 	pwc-8.12-bsd-0.02.patch.gz
+PATCHFILES= 	pwc-9.0.2-bsd-0.03.patch.gz
 PATCH_DIST_STRIP=	-p1
 
 MAINTAINER=	hamajima@NetBSD.org
@@ -19,13 +19,13 @@ INSTALLATION_DIRS=	bin
 
 do-build:
 	for f in phpsshot phpsview ; do				\
-		cd ${WRKSRC}/2.4.22 && ${SETENV} ${MAKE_ENV}	\
+		cd ${WRKSRC}/2.4 && ${SETENV} ${MAKE_ENV}	\
 		${MAKE_PROGRAM} -f ${MAKEFILE}.$$f ;		\
 	done
 
 do-install:
 	for f in phpsshot phpsview ; do				\
-		cd ${WRKSRC}/2.4.22 &&				\
+		cd ${WRKSRC}/2.4 &&				\
 		${INSTALL_PROGRAM} $$f ${PREFIX}/bin ;	\
 	done
 
